# mint-but-better

./: .gitignore  README.md  pyproject.toml  run_dashboard.sh
data/config/: example_ignored_transactions.json
data/input/: example_apple.csv  example_bilt.csv  example_chase.csv
docs/: AGENTS.md  AMOUNT_NORMALIZATION.md  CATEGORY_ASSIGNMENT_GUIDE.md  CREDIT_CARD_LOGIC_FIX.md  FEATURE_SUMMARY.md  IGNORE_LIST_FEATURE.md  INCLUDE_EXCLUDE_FILTERS.md  README.md  RENT_CATEGORY_ADDED.md  REORGANIZATION_SUMMARY.md  TRANSACTION_FILTERS_ADDED.md
scripts/: assign_categories.py  concatenate_transactions.py
src/: __init__.py  dashboard.py  ignore_list_manager.py
